k8s/bcnode/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcnode-deployment
  labels:
    app: bcnode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcnode
  template:
    # template for bcnode pods
    metadata:
      labels:
        app: bcnode
    spec:
      volumes:
      - name: vol-bcnode-db
        persistentVolumeClaim:
          claimName: pvc-bcnode-db
      containers:
      - name: bcnode
        image: lgray/bcnode:latest
        volumeMounts:
        - mountPath: /bc/_data
          name: vol-bcnode-db
        ports:
        - name: rpc
          protocol: TCP
          containerPort: 3000
        - name: bcbootstrap
          protocol: TCP
          containerPort: 16061
        args: ['start', '--rovers', '--rpc', '--ws', '--ui', '--node', '--scookie', '$(BC_SCOOKIE)']
        imagePullPolicy: Always
      - name: mining-api-reformatter
        image: lgray/mining-api-reformatter:latest
        ports:
        - containerPort: 50052 # mining port
        - containerPort: 3001  # jsonrpc
        imagePullPolicy: Always
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - bcnode
            topologyKey: "kubernetes.io/hostname"
