k8s/bcnode/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bcnode-service
spec:
  selector:
    app: bcnode
  ports:
    - name: bcbootstrap
      protocol: TCP
      port: 16061
      targetPort: 16061
    - name: rpc
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: miner
      protocol: TCP
      port: 50052
      targetPort: 50052
