k8s/bcnode/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bcnode-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
      - host: open-overline-pool.us
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: bcnode-service
                  port:
                    number: 16061
